# opc-ua-server

./: .gitignore  README.md  config.yaml  pyproject.toml
opc_ua_playground/: README.md  __init__.py  common.py
opc_ua_playground/certs/clients/rejected/: README.md
opc_ua_playground/trigger_return/: README.md  __init__.py  receiver.py  sender.py  server.config.yaml  shared.py
opc_ua_server/: __init__.py  __main__.py  app.py  certificates.py  config.py
tests/: test_certificates.py  test_config.py
